# TODO_LIST

./: .gitignore  README.md  manage.py  pyproject.toml
todo_lists/: asgi.py  settings.py  urls.py  wsgi.py
todolist/: models.py  serializers.py  urls.py  views.py
todolist/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_age_alter_user_gender_and_more.py
